# ambient-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logger.py  pyproject.toml  ruff.toml
app/: exceptions.py  main.py
app/database/: base.py  database.py
app/domain/: base.py  dimmer.py  lock.py  switch.py  thermostat.py
app/models/: __init__.py  base.py  device.py  dwelling.py  hub.py
app/repository/: device.py  dwelling.py  hub.py
app/routers/: device.py  dwelling.py  hub.py
app/schemas/: base.py  device.py  dwelling.py  dwellingschema.py  hub.py
app/service/: device.py  dwelling.py  hub.py
migrations/: env.py
migrations/versions/: 3e9c886df0a6_new_migration.py  457117f4a96a_create_initial_tables.py
tests/: conftest.py  test_dwelling.py  test_hub.py
